force-app/main/default/objects/associate__c/associate__c.object-meta.xml
<CustomObject>
    <description>Associé d&#39;un projet de création de société</description>
    <label>Associé</label>
    <nameField>
        <label>Nom de l&#39;associé ou Dénomination sociale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associés</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>