force-app/main/default/objects/associate__c/fields/AccreConditions__c.field-meta.xml
<CustomField>
    <fullName>AccreConditions__c</fullName>
    <inlineHelpText>Si demande d&#39;ACCRE, précisez le statut du demandeur</inlineHelpText>
    <label>Conditions ACCRE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demandeur d&#39;emploi indemnisé ou indemnisable</fullName>
            </value>
            <value>
                <fullName>Demandeur d&#39;emploi non indemnisé inscrit à Pôle Emploi au cours des 18 derniers mois</fullName>
            </value>
            <value>
                <fullName>Personne de moins de 30 ans non indemnisée ou reconnue handicapée</fullName>
            </value>
            <value>
                <fullName>Jeune de 18 à 25 ans révolus</fullName>
            </value>
            <value>
                <fullName>Bénéficiaire du RSA</fullName>
            </value>
            <value>
                <fullName>Bénéficiaire du RMI</fullName>
            </value>
            <value>
                <fullName>Bénéficiaire du ASS</fullName>
            </value>
            <value>
                <fullName>Bénéficiaire du ATT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>