force-app/main/default/objects/associate__c/fields/AccreInformations__c.field-meta.xml
<CustomField>
    <fullName>AccreInformations__c</fullName>
    <inlineHelpText>Niveau de formation, qualification du dernier emploi occupé, motif d&#39;inscription à pôle emploi.</inlineHelpText>
    <label>Informations ACCRE</label>
    <type>TextArea</type>
</CustomField>