force-app/main/default/objects/associate__c/fields/AccreRequest__c.field-meta.xml
<CustomField>
    <fullName>AccreRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Y-a-t-il une demande d&#39;ACCRE à faire ?</inlineHelpText>
    <label>Demande d&#39;ACCRE ?</label>
    <type>Checkbox</type>
</CustomField>