force-app/main/default/objects/associate__c/fields/ActivityTypeConserved__c.field-meta.xml
<CustomField>
    <fullName>ActivityTypeConserved__c</fullName>
    <inlineHelpText>Si cumul d&#39;activité avec le mandat social</inlineHelpText>
    <label>Type d&#39;activité conservée</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salarié</fullName>
            </value>
            <value>
                <fullName>Salarié Agricole</fullName>
            </value>
            <value>
                <fullName>Retraité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>