force-app/main/default/objects/associate__c/fields/AssociateComments__c.field-meta.xml
<CustomField>
    <fullName>AssociateComments__c</fullName>
    <label>Commentaires liés à l&#39;associé</label>
    <type>TextArea</type>
</CustomField>