force-app/main/default/objects/associate__c/fields/BirthCity__c.field-meta.xml
<CustomField>
    <fullName>BirthCity__c</fullName>
    <label>Commune de naissance</label>
    <length>80</length>
    <type>Text</type>
</CustomField>