force-app/main/default/objects/associate__c/fields/BirthCityPostCode__c.field-meta.xml
<CustomField>
    <fullName>BirthCityPostCode__c</fullName>
    <label>Code Postal (Commune de naissance)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>