force-app/main/default/objects/associate__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>