force-app/main/default/objects/associate__c/fields/CapitalContribution__c.field-meta.xml
<CustomField>
    <fullName>CapitalContribution__c</fullName>
    <formula>KindShareCapital__c  +  CashShareCapital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apport en capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>