force-app/main/default/objects/associate__c/fields/CashShareCapital__c.field-meta.xml
<CustomField>
    <fullName>CashShareCapital__c</fullName>
    <label>Apport en numéraire</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>