force-app/main/default/objects/associate__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Ville</label>
    <length>80</length>
    <type>Text</type>
</CustomField>