force-app/main/default/objects/associate__c/fields/Civility__c.field-meta.xml
<CustomField>
    <fullName>Civility__c</fullName>
    <label>Civilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Civility</valueSetName>
    </valueSet>
</CustomField>