force-app/main/default/objects/associate__c/fields/CompanySpouseActivity__c.field-meta.xml
<CustomField>
    <fullName>CompanySpouseActivity__c</fullName>
    <inlineHelpText>Si le conjoint n&#39;exerce pas d&#39;activité dans l&#39;entreprise, aucun des champs suivants n&#39;est à remplir.</inlineHelpText>
    <label>Activité dans l&#39;entreprise ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Oui en tant que Salarié</fullName>
            </value>
            <value>
                <fullName>Oui en tant qu&#39;Associé</fullName>
            </value>
            <value>
                <fullName>Oui en tant que Collaborateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>