force-app/main/default/objects/associate__c/fields/CurrentTNSRegime__c.field-meta.xml
<CustomField>
    <fullName>CurrentTNSRegime__c</fullName>
    <label>Régime TNS actuel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Régime général</fullName>
            </value>
            <value>
                <fullName>Agricole</fullName>
            </value>
            <value>
                <fullName>Non salarié non agricole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>