force-app/main/default/objects/associate__c/fields/EndOfParallelActivity__c.field-meta.xml
<CustomField>
    <fullName>EndOfParallelActivity__c</fullName>
    <inlineHelpText>Date de fin de l&#39;activité d&#39;auto-entreprise ou de l&#39;entreprise individuelle</inlineHelpText>
    <label>Date de fin d&#39;activité parallèle</label>
    <type>Date</type>
</CustomField>