force-app/main/default/objects/associate__c/fields/FatherFirstName__c.field-meta.xml
<CustomField>
    <fullName>FatherFirstName__c</fullName>
    <label>Prénom du père</label>
    <length>80</length>
    <type>Text</type>
</CustomField>