force-app/main/default/objects/associate__c/fields/FatherLastName__c.field-meta.xml
<CustomField>
    <fullName>FatherLastName__c</fullName>
    <label>Nom du père</label>
    <length>80</length>
    <type>Text</type>
</CustomField>