force-app/main/default/objects/associate__c/fields/FathersLegalRepresentativeFirstName__c.field-meta.xml
<CustomField>
    <fullName>FathersLegalRepresentativeFirstName__c</fullName>
    <label>Prénom du père du représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>