force-app/main/default/objects/associate__c/fields/FathersLegalRepresentativeLastName__c.field-meta.xml
<CustomField>
    <fullName>FathersLegalRepresentativeLastName__c</fullName>
    <label>Nom du père du représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>