force-app/main/default/objects/associate__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>Prénom de l&#39;associé</label>
    <length>80</length>
    <type>Text</type>
</CustomField>