force-app/main/default/objects/associate__c/fields/ID_Id_Card__c.field-meta.xml
<CustomField>
    <fullName>ID_Id_Card__c</fullName>
    <description>Champ système contenant l&#39;ID du ContentDocument chargé en tant que &quot;Carte d&#39;identité&quot;. null si aucune carte d&#39;identité.</description>
    <label>ID de la carte d&#39;identité</label>
    <type>TextArea</type>
</CustomField>