force-app/main/default/objects/associate__c/fields/ID_Kbis__c.field-meta.xml
<CustomField>
    <fullName>ID_Kbis__c</fullName>
    <description>Champ système contenant l&#39;ID du ContentDocument chargé en tant que &quot;Extrait de Kbis&quot;. null si aucun Kbis.</description>
    <label>ID Kbis</label>
    <type>TextArea</type>
</CustomField>