force-app/main/default/objects/associate__c/fields/ID_Status__c.field-meta.xml
<CustomField>
    <fullName>ID_Status__c</fullName>
    <description>Champ système contenant l&#39;ID du ContentDocument chargé en tant que &quot;Statuts à jour&quot;. null si aucun statut.</description>
    <label>ID Statuts</label>
    <type>TextArea</type>
</CustomField>