force-app/main/default/objects/associate__c/fields/ID_Vital_Card__c.field-meta.xml
<CustomField>
    <fullName>ID_Vital_Card__c</fullName>
    <description>Champ système contenant l&#39;ID du ContentDocument chargé en tant que &quot;Carte vitale&quot;. null si aucune carte vitale.</description>
    <label>ID de la carte vitale</label>
    <type>TextArea</type>
</CustomField>