force-app/main/default/objects/associate__c/fields/KindShareCapital__c.field-meta.xml
<CustomField>
    <fullName>KindShareCapital__c</fullName>
    <inlineHelpText>Joindre la liste détaillée</inlineHelpText>
    <label>Apport en nature</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>