force-app/main/default/objects/associate__c/fields/LegalRepresentative__c.field-meta.xml
<CustomField>
    <fullName>LegalRepresentative__c</fullName>
    <label>Représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>