force-app/main/default/objects/associate__c/fields/LegalRepresentativeFirstName__c.field-meta.xml
<CustomField>
    <fullName>LegalRepresentativeFirstName__c</fullName>
    <label>Prénom représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>