force-app/main/default/objects/associate__c/fields/LegalRepresentativeLastName__c.field-meta.xml
<CustomField>
    <fullName>LegalRepresentativeLastName__c</fullName>
    <label>Nom du représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>