force-app/main/default/objects/associate__c/fields/LegalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalStatus__c</fullName>
    <label>Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SASU</fullName>
            </value>
            <value>
                <fullName>EURL</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>SARL</fullName>
            </value>
            <value>
                <fullName>SCI</fullName>
            </value>
            <value>
                <fullName>SELARLU</fullName>
            </value>
            <value>
                <fullName>SELARL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>