force-app/main/default/objects/associate__c/fields/MaidenName__c.field-meta.xml
<CustomField>
    <fullName>MaidenName__c</fullName>
    <label>Nom de jeune fille</label>
    <length>80</length>
    <type>Text</type>
</CustomField>