force-app/main/default/objects/associate__c/fields/MailAdress__c.field-meta.xml
<CustomField>
    <fullName>MailAdress__c</fullName>
    <label>Adresse mail</label>
    <type>Email</type>
</CustomField>