force-app/main/default/objects/associate__c/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Situation matrimoniale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Célibataire</fullName>
            </value>
            <value>
                <fullName>Marié sous le régime de l&#39;indivision</fullName>
            </value>
            <value>
                <fullName>Marié sous le régime de la séparation</fullName>
            </value>
            <value>
                <fullName>Pacsé sous le régime de l&#39;indivision</fullName>
            </value>
            <value>
                <fullName>Pacsé sous le régime de la séparation</fullName>
            </value>
            <value>
                <fullName>Divorcé</fullName>
            </value>
            <value>
                <fullName>Veuf</fullName>
            </value>
            <value>
                <fullName>Marié sous le régime de la communauté</fullName>
                <isActive>false</isActive>
                <label>Marié sous le régime de la communauté</label>
            </value>
            <value>
                <fullName>Pacsé sous le régime de la communauté</fullName>
                <isActive>false</isActive>
                <label>Pacsé sous le régime de la communauté</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>