force-app/main/default/objects/associate__c/fields/MicroEnterpriseCancellationDate__c.field-meta.xml
<CustomField>
    <fullName>MicroEnterpriseCancellationDate__c</fullName>
    <label>Date de radiation Micro-entreprise</label>
    <type>Date</type>
</CustomField>