force-app/main/default/objects/associate__c/fields/MotherFirstName__c.field-meta.xml
<CustomField>
    <fullName>MotherFirstName__c</fullName>
    <label>Prénom de la mère</label>
    <length>80</length>
    <type>Text</type>
</CustomField>