force-app/main/default/objects/associate__c/fields/MotherMaidenName__c.field-meta.xml
<CustomField>
    <fullName>MotherMaidenName__c</fullName>
    <label>Nom de jeune fille de la mère</label>
    <length>80</length>
    <type>Text</type>
</CustomField>