force-app/main/default/objects/associate__c/fields/MothersLegalRepresentativeFirstName__c.field-meta.xml
<CustomField>
    <fullName>MothersLegalRepresentativeFirstName__c</fullName>
    <label>Prénom mère représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>