force-app/main/default/objects/associate__c/fields/MothersLegalRepresentativeLastName__c.field-meta.xml
<CustomField>
    <fullName>MothersLegalRepresentativeLastName__c</fullName>
    <label>Nom de naissance mère représentant légal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>