force-app/main/default/objects/associate__c/fields/Nationnality__c.field-meta.xml
<CustomField>
    <fullName>Nationnality__c</fullName>
    <label>Nationalité</label>
    <length>18</length>
    <type>Text</type>
</CustomField>