force-app/main/default/objects/associate__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Associés</relationshipLabel>
    <relationshipName>AssociatesOpp</relationshipName>
    <type>Lookup</type>
</CustomField>