force-app/main/default/objects/associate__c/fields/OtherFirstName__c.field-meta.xml
<CustomField>
    <fullName>OtherFirstName__c</fullName>
    <label>Autres prénoms de l&#39;associé</label>
    <length>80</length>
    <type>Text</type>
</CustomField>