force-app/main/default/objects/associate__c/fields/ParallelActivity__c.field-meta.xml
<CustomField>
    <fullName>ParallelActivity__c</fullName>
    <inlineHelpText>Si l&#39;associé est dirigeant, exerce-t-il une activité en parallèle ?</inlineHelpText>
    <label>Activité en parallèle ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sous la forme d&#39;une entreprise individuelle</fullName>
            </value>
            <value>
                <fullName>Sous la forme d&#39;une auto-entreprise</fullName>
            </value>
            <value>
                <fullName>non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>