force-app/main/default/objects/associate__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Code Postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>