force-app/main/default/objects/associate__c/fields/Siret__c.field-meta.xml
<CustomField>
    <fullName>Siret__c</fullName>
    <label>Siret</label>
    <length>20</length>
    <type>Text</type>
</CustomField>