force-app/main/default/objects/associate__c/fields/SocialMandat__c.field-meta.xml
<CustomField>
    <fullName>SocialMandat__c</fullName>
    <label>Type de mandat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
                <label>Président</label>
            </value>
            <value>
                <fullName>DirecteurGeneral</fullName>
                <label>Directeur général</label>
            </value>
            <value>
                <fullName>Gerant</fullName>
                <label>Gérant</label>
            </value>
            <value>
                <fullName>Co-gerant</fullName>
                <isActive>false</isActive>
                <label>Co-gerant</label>
            </value>
            <value>
                <fullName>DirecteurGeneralDelegue</fullName>
                <isActive>false</isActive>
                <label>DirecteurGeneralDelegue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>