force-app/main/default/objects/associate__c/fields/SocialSecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SocialSecurityNumber__c</fullName>
    <label>Numéro de sécurité sociale</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>