force-app/main/default/objects/associate__c/fields/SpouseCity__c.field-meta.xml
<CustomField>
    <fullName>SpouseCity__c</fullName>
    <label>Ville du conjoint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>