force-app/main/default/objects/associate__c/fields/SpouseFirstName__c.field-meta.xml
<CustomField>
    <fullName>SpouseFirstName__c</fullName>
    <label>Prénom du conjoint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>