force-app/main/default/objects/associate__c/fields/SpouseMaidenName__c.field-meta.xml
<CustomField>
    <fullName>SpouseMaidenName__c</fullName>
    <label>Nom de jeune fille du conjoint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>