force-app/main/default/objects/associate__c/fields/SpouseName__c.field-meta.xml
<CustomField>
    <fullName>SpouseName__c</fullName>
    <label>Nom du conjoint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>