force-app/main/default/objects/associate__c/fields/SpousePostalCode__c.field-meta.xml
<CustomField>
    <fullName>SpousePostalCode__c</fullName>
    <label>Code Postal du conjoint</label>
    <length>5</length>
    <type>Text</type>
</CustomField>