force-app/main/default/objects/associate__c/fields/SpouseSocialSecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SpouseSocialSecurityNumber__c</fullName>
    <label>Numéro de sécurité sociale du conjoint</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>