force-app/main/default/objects/associate__c/fields/SpouseStreet__c.field-meta.xml
<CustomField>
    <fullName>SpouseStreet__c</fullName>
    <label>Numéro et rue du conjoint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>