force-app/main/default/objects/associate__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Projet de création</label>
    <referenceTo>Start__c</referenceTo>
    <relationshipLabel>Associés</relationshipLabel>
    <relationshipName>Associate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>