force-app/main/default/objects/associate__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Numéro et Rue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>