force-app/main/default/objects/associate__c/recordTypes/Personne_Physique.recordType-meta.xml
<RecordType>
    <fullName>Personne_Physique</fullName>
    <active>true</active>
    <label>Personne Physique</label>
</RecordType>